# eos

./: .gitignore  Cargo.toml  Dockerfile  README.md  VI_EDITOR_FIX.md  WRITE_FEATURE.md  actos.code-workspace  docker-entrypoint.sh  init  install-private-vsix.sh  mount-eos.sh  test-spawn.json
.devcontainer/: Dockerfile  devcontainer.json
act/: Cargo.toml
act/src/: main.rs
demos/: demo.sh  ping-pong.sh
eos/: Cargo.toml
eos/src/: common.rs  file_overlay.rs  lib.rs  main.rs  system.rs
examples/: ping-pong.rn  start-ping-pong.sh  test-actor.rn
operator/: Cargo.toml
operator/src/: file_overlay.rs  main.rs  system.rs
script-actor/: Cargo.toml
script-actor/src/: main.rs
src/: common.rs  file_overlay.rs  main.rs
supervisor/: Cargo.toml
supervisor/src/: lib.rs  main.rs  proxy.rs
test-actor/: Cargo.toml
test-actor/src/: main.rs
