[package]
name = "explore-os"
version = "0.2.0"
edition = "2024"
description = "An actor system exposed as filesystem"
authors = ["hardliner66"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/explore-os/eos"
documentation = "https://docs.rs/explore-os/latest/explore-os/"
include = ["src", "README.md"]

[[bin]]
name = "eos"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = { version = "4.5.59", optional = true }
nanoid = "0.4.0"
nix = { version = "0.30.1", features = ["signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = { version = "3.1.1", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"
bytes = { version = "1.10.1", features = ["serde"] }
futures-util = "0.3.31"
redb = "3.1.0"
flume = "0.11.1"
lazy_static = "1.4.0"
rune = "0.14.1"
log = "0.4.28"
signal-hook = "0.3.18"
stringlit = "2.1.0"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
rs9p = "0.11.0"
async-trait = "0.1.89"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
axum = "0.8.6"
reqwest = { version = "0.12.24", features = ["json"] }

[features]
docker = []
_setup = ["dep:clap_complete"]
