[package]
name = "eos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-nats = "0.44.2"
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = { version = "4.5.59", optional = true }
nanoid = "0.4.0"
nix = { version = "0.30.1", features = ["signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = { version = "3.1.1", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
bytes = { version = "1.10.1", features = ["serde"] }
futures-util = "0.3.31"
redb = "3.1.0"

[features]
_setup = ["dep:clap_complete"]
