[package]
name = "eos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tarpc = { version = "0.34", features = ["tokio1", "serde1", "serde-transport", "serde-transport-bincode", "unix"] }
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = { version = "4.5.59", optional = true }
nanoid = "0.4.0"
nix = { version = "0.30.1", features = ["signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = { version = "3.1.1", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"
bytes = { version = "1.10.1", features = ["serde"] }
futures-util = "0.3.31"
redb = "3.1.0"
flume = "0.11.1"
lazy_static = "1.4.0"
rune = "0.14.1"
log = "0.4.28"
signal-hook = "0.3.18"
stringlit = "2.1.0"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
rs9p = "0.10.0"
async-trait = "0.1.89"
thiserror = "2.0.17"
fern = {version = "0.7.1", features = ["date-based"]}
humantime = "2.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
docker = []
_setup = ["dep:clap_complete"]
