[package]
name = "operator"
version = "0.1.0"
edition = "2024"

[dependencies]
eos = { version = "0.1.0", path = "../eos" }

anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.8"
flume = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.28"
nanoid = "0.4.0"
nix = { version = "0.30.1", features = ["signal"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
signal-hook = "0.3.18"
stringlit = "2.1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
async-nats = "0.44.2"
futures-util = "0.3.31"
bytes = { version = "1.10.1", features = ["serde"] }
rs9p = "0.7.0"
async-trait = "0.1.89"
thiserror = "2.0.17"
